# practical-mutation-testing

./: .gitignore  CMakeLists.txt  README.md
Dictionary/: CMakeLists.txt  _clang-format
Dictionary/include/: Dictionary.hpp  Dictionary_utils.hpp
Dictionary/src/: CMakeLists.txt  Dictionary.cpp  Dictionary.cpp.orig  Dictionary.cpp.rej  Dictionary_utils.cpp
Dictionary/unittest/: CMakeLists.txt  testDictionary.cpp  testDictionaryRequirements.cpp  testDictionary_cov.cpp  testUtils.cpp
dbc/: CMakeLists.txt  dbc.cpp  dbc.hpp
dbc/unit_test/: CMakeLists.txt  dbcunit.cpp
