include(GoogleTest)
include(CTest)

add_compile_options(-Wall -Werror -Wextra)
add_compile_definitions("$<$<CONFIG:Debug>:DBC_ENABLED>")
add_compile_options("$<$<CONFIG:Debug>:-fsanitize=undefined>")
add_link_options("$<$<CONFIG:Debug>:-fsanitize=undefined>")
add_compile_options("$<$<CONFIG:Debug>:-fsanitize=address>")
add_link_options("$<$<CONFIG:Debug>:-fsanitize=address>")

macro(package_add_test_with_libraries TESTNAME FILES LIBRARIES)
    add_executable(${TESTNAME} ${FILES})
    target_link_libraries(${TESTNAME} gtest gmock gtest_main ${LIBRARIES})
    gtest_discover_tests(${TESTNAME})
    set_target_properties(${TESTNAME} PROPERTIES FOLDER unittest)
endmacro()

package_add_test_with_libraries(DictionaryUtilTests testUtils.cpp dict_cpp dbc)
package_add_test_with_libraries(DictionaryTests testDictionary.cpp dict_cpp dbc)
package_add_test_with_libraries(RequirementBasedTests testDictionaryRequirements.cpp dict_cpp dbc)
package_add_test_with_libraries(TopUpTests testDictionary_cov.cpp dict_cpp dbc)